# AgentPolicyPack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
docs/: ci-security-notes.md  development.md  index.md  policy-format.md  roadmap.md  security.md
examples/tool_governance/: allow-search-request.yaml  policy.yaml  requests.yaml
reports/: v0.1-verification.md
src/agent_policy_pack/: __init__.py  adapters.py  cli.py  conditions.py  constants.py  diffing.py  evaluator.py  exceptions.py  field_path.py  loader.py  matching.py  models.py  reports.py  serialization.py  simulation.py  testing.py  validation.py
tests/: test_core.py
tests/fixtures/diff/: policy-v1.yaml  policy-v2.yaml  requests.yaml
