[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentpolicypack"
version = "0.1.0a1"
description = "A vendor-neutral policy-as-code toolkit for governing AI agents and agentic workflows."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "sekacorn" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "packaging>=24.0",
    "pydantic>=2.7",
    "PyYAML>=6.0.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.9",
    "build>=1.2",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/sekacorn/AgentPolicyPack"
Repository = "https://github.com/sekacorn/AgentPolicyPack"
Issues = "https://github.com/sekacorn/AgentPolicyPack/issues"
Documentation = "https://github.com/sekacorn/AgentPolicyPack/tree/main/docs"

[project.scripts]
agentpolicy = "agent_policy_pack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_policy_pack"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "docs", "README.md", "LICENSE", "pyproject.toml"]
exclude = ["dist", ".venv", "reports", ".pytest_cache", ".ruff_cache", ".mypy_cache"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "SIM", "T20", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_policy_pack"]

[tool.pytest.ini_options]
addopts = "--cov=agent_policy_pack --cov-branch --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agent_policy_pack"]

[tool.bandit]
exclude_dirs = ["tests", "dist", ".venv"]
